Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
     <div class="container">
       <section id="main_content">
-        <p><a href="http://octopress.lynnard.tk">Octopress-CLI</a> is a shell script to make <a href="http://octopress.org/">octopress</a> more command-line friendly.</p>
+        <h1>
+<a name="octopress-cli" class="anchor" href="#octopress-cli"><span class="octicon octicon-link"></span></a>Octopress-CLI</h1>
+
+<p><a href="http://octopress.lynnard.tk">Octopress-CLI</a> is a shell script to make <a href="http://octopress.org/">octopress</a> more command-line friendly.</p>
 
 <p>Features include:</p>
 
@@ -56,7 +59,9 @@
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<pre><code>octopress rake &lt;rake command&gt;|update|help
+<pre><code>octopress rake &lt;rake command&gt;
+octopress update
+octopress help
 </code></pre>
 
 <ul>
